--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "file-saver": "^2.0.5",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.9.4",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.14",
     "xlsx": "^0.18.5"
   },
